--- a/Sprint2/HMTL/Consultapedidos.html
+++ b/Sprint2/HMTL/Consultapedidos.html
@@ -1,109 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
-<<<<<<< HEAD
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>consultar Pedidos</title>
-</head>
+  </head>
 
-=======
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultar Pedidos</title>
-</head>
->>>>>>> e6f107573a3bd425acd916146b4ecce1186f0237
-<body>
+  <body>
     <div style="clear: both">
-        <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
-        <h1 style="text-align:center">RappiPedidosGrp5</h1>
-      </div>
-      <br>
-      <br>
-<<<<<<< HEAD
-      <nav class="navegacion">
-        <ul class="menu">
-            <li><a href="principal.html">Principal</a></li>
-            <li><a href="creaciondeusu.html">Usuario</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="pedidos.html">Pedidos</a>
-                <ul class="submenu">
-                    <li><a href="crearpedido.html">Crear Pedido</a></li>
-                    <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-                    <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-                    <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-                </ul>
-            </li>
-        </ul>
-      </nav>
-
-=======
-      <ul>
+      <img
+        src="img/logo_pedidos.png"
+        alt="img/no-image.png"
+        width="120"
+        height="60"
+        style="float: left"
+      />
+      <h1 style="text-align: center">RappiPedidosGrp5</h1>
+    </div>
+    <br />
+    <br />
+    <nav class="navegacion">
+      <ul class="menu">
         <li><a href="principal.html">Principal</a></li>
         <li><a href="creaciondeusu.html">Usuario</a></li>
-        <li><a href="productos.html">Producto</a></li>
-        <li>Pedido
-            <ul>
-                <li><a href="pedidos.html">Pedido</a></li>
-                <li><a href="crearpedido.html">Crear Pedido</a></li>
-                <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-                <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-                <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-            </ul>
+        <li><a href="productos.html">Productos</a></li>
+        <li>
+          <a href="pedidos.html">Pedidos</a>
+          <ul class="submenu">
+            <li><a href="crearpedido.html">Crear Pedido</a></li>
+            <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+            <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+            <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+          </ul>
         </li>
       </ul>
->>>>>>> e6f107573a3bd425acd916146b4ecce1186f0237
+    </nav>
+
     <div>
+      <form action="#">
         <h2>Consulta de pedidos</h2>
 
-        <form action="#"></form>
         <label for="idusuario">Id Usuario:</label>
-        <input type="text" id="idusuario" size="15" value="Digite Cedula ID">
-        <br>
+        <input type="text" id="idusuario" size="15" value="Digite Cedula ID" />
+        <br />
 
         <label for="numeropedido">N° Pedido:</label>
-        <input type="text" id="numeropedido" size="15" value="Digite N° pedido">
-        <br>
-        <br>
-        <input type="submit" value="Consultar">
-
-        </form>
+        <input
+          type="text"
+          id="numeropedido"
+          size="15"
+          value="Digite N° pedido"
+        />
+        <br />
+        <br />
+        <input type="submit" value="Consultar" />
+      </form>
     </div>
-    <br>
-    <br>
-   
-    <table border="3">
-        <thead>
-            <tr>
-                <th>N° pedido</th>
-                <th>Fecha</th>
-                <th>Cliente</th>
-                <th>Estado</th>
-                <th>Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>00000000001</td>
-                <td>21-09-2021</td>
-                <td>Maria Cecilia Gomez</td>
-                <td>Pendiente</td>
-                <td>475000</td>
-            
-            </tr>
-        </tbody>
-    </table>  
-    <br>
-    <br>
-    <br>
-    <input type="submit" value="imprimir">
-    <form action="pedidos.html">
-        <input type="submit" value="cerrar"> 
-    </form>
+    <br />
+    <br />
 
-</body>
+    <table border="3">
+      <thead>
+        <tr>
+          <th>N° pedido</th>
+          <th>Fecha</th>
+          <th>Cliente</th>
+          <th>Estado</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>00000000001</td>
+          <td>21-09-2021</td>
+          <td>Maria Cecilia Gomez</td>
+          <td>Pendiente</td>
+          <td>475000</td>
+        </tr>
+      </tbody>
+    </table>
+    <br />
+    <br />
+    <br />
+    <input type="submit" value="imprimir" />
+    <form action="pedidos.html">
+      <input type="submit" value="cerrar" />
+    </form>
+  </body>
 </html>
