--- a/Sprint2/HMTL/consultaReporte.html
+++ b/Sprint2/HMTL/consultaReporte.html
@@ -1,155 +1,121 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-<<<<<<< HEAD
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Consultar Reporte</title>
-</head>
+  </head>
 
-=======
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reportes</title>
-</head>
->>>>>>> e6f107573a3bd425acd916146b4ecce1186f0237
-<body>
+  <body>
     <div style="clear: both">
-        <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
-        <h1 style="text-align:center">RappiPedidosGrp5</h1>
-      </div>
-      <br>
-      <br>
-<<<<<<< HEAD
-      <nav class="navegacion">
-        <ul class="menu">
-            <li><a href="principal.html">Principal</a></li>
-            <li><a href="creaciondeusu.html">Usuario</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="pedidos.html">Pedidos</a>
-                <ul class="submenu">
-                    <li><a href="crearpedido.html">Crear Pedido</a></li>
-                    <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-                    <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-                    <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-                </ul>
-            </li>
-        </ul>
-      </nav>
-
-=======
-      <ul>
+      <img
+        src="img/logo_pedidos.png"
+        alt="img/no-image.png"
+        width="120"
+        height="60"
+        style="float: left"
+      />
+      <h1 style="text-align: center">RappiPedidosGrp5</h1>
+    </div>
+    <br />
+    <br />
+    <nav class="navegacion">
+      <ul class="menu">
         <li><a href="principal.html">Principal</a></li>
         <li><a href="creaciondeusu.html">Usuario</a></li>
-        <li><a href="productos.html">Producto</a></li>
-        <li>Pedido
-            <ul>
-                <li><a href="pedidos.html">Pedido</a></li>
-                <li><a href="crearpedido.html">Crear Pedido</a></li>
-                <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-                <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-                <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-            </ul>
+        <li><a href="productos.html">Productos</a></li>
+        <li>
+          <a href="pedidos.html">Pedidos</a>
+          <ul class="submenu">
+            <li><a href="crearpedido.html">Crear Pedido</a></li>
+            <li><a href="modificarpedido.html">Modificar Pedido</a></li>
+            <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
+            <li><a href="consultaReporte.html">Reporte Pedido</a></li>
+          </ul>
         </li>
       </ul>
->>>>>>> e6f107573a3bd425acd916146b4ecce1186f0237
+    </nav>
+
     <div>
+      <form action="#">
         <h2>Consulta de Reportes</h2>
 
+        <label for="fdesde">Desde:</label>
+        <input type="date" name="fdesde" id="fdesde" required />
+        <br />
 
-        <form action="#"></form>
-
-
-        <label for="fname">Desde:</label>
-        <input type="date">
-        <br>
-
-        <label for="fname">Hasta:</label>
-        <input type="date">
-        <br>
-        <br>
-        <input type="submit" value="Consultar">
-
-        </form>
+        <label for="fhasta">Hasta:</label>
+        <input type="date" name="fhasta" id="fhasta" required />
+        <br />
+        <br />
+        <input type="submit" value="Consultar" />
+      </form>
     </div>
-    <br>
-    <br>
+    <br />
+    <br />
 
     <table border="3">
-        <thead>
-            <tr>
-                <th>N° pedido</th>
-                <th>Fecha</th>
-                <th>Cliente</th>
-                <th>Estado</th>
-                <th>Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>00000000001</td>
-                <td>21-09-2021</td>
-                <td>Maria Cecilia Gomez</td>
-                <td>Pendiente</td>
-                <td>475000</td>
-
-            </tr>
-            <tr>
-                <td>00000000002</td>
-                <td>21-09-2021</td>
-                <td>Lucia Ramirez</td>
-                <td>Pendiente</td>
-                <td>500000</td>
-
-            </tr>
-            <tr>
-                <td>00000000003</td>
-                <td>21-09-2021</td>
-                <td>Tatiana Sanchez</td>
-                <td>Pendiente</td>
-                <td>150000</td>
-
-            </tr>
-            <tr>
-                <td>00000000004</td>
-                <td>05-09-2021</td>
-                <td>Andres Fernando Gomezz</td>
-                <td>Cancelado</td>
-                <td>431500</td>
-
-            </tr>
-            <tr>
-                <td>00000000005</td>
-                <td>01-09-2021</td>
-                <td>Carolina Montaña Diaz</td>
-                <td>Pendiente</td>
-                <td>156000</td>
-
-            </tr>
-            <tr>
-                <td>00000000006</td>
-                <td>15-09-2021</td>
-                <td>Mario Rodriguez Soto</td>
-                <td>Terminado</td>
-                <td>250000</td>
-
-            </tr>
-        </tbody>
+      <thead>
+        <tr>
+          <th>N° pedido</th>
+          <th>Fecha</th>
+          <th>Cliente</th>
+          <th>Estado</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>00000000001</td>
+          <td>21-09-2021</td>
+          <td>Maria Cecilia Gomez</td>
+          <td>Pendiente</td>
+          <td>475000</td>
+        </tr>
+        <tr>
+          <td>00000000002</td>
+          <td>21-09-2021</td>
+          <td>Lucia Ramirez</td>
+          <td>Pendiente</td>
+          <td>500000</td>
+        </tr>
+        <tr>
+          <td>00000000003</td>
+          <td>21-09-2021</td>
+          <td>Tatiana Sanchez</td>
+          <td>Pendiente</td>
+          <td>150000</td>
+        </tr>
+        <tr>
+          <td>00000000004</td>
+          <td>05-09-2021</td>
+          <td>Andres Fernando Gomezz</td>
+          <td>Cancelado</td>
+          <td>431500</td>
+        </tr>
+        <tr>
+          <td>00000000005</td>
+          <td>01-09-2021</td>
+          <td>Carolina Montaña Diaz</td>
+          <td>Pendiente</td>
+          <td>156000</td>
+        </tr>
+        <tr>
+          <td>00000000006</td>
+          <td>15-09-2021</td>
+          <td>Mario Rodriguez Soto</td>
+          <td>Terminado</td>
+          <td>250000</td>
+        </tr>
+      </tbody>
     </table>
-    <br>
-    <br>
-    <br>
-    <input type="submit" value="Exportar">
-<<<<<<< HEAD
+    <br />
+    <br />
+    <br />
+    <input type="submit" value="Exportar" />
     <form action="pedidos.html">
-        <input type="submit" value="cerrar"> 
+      <input type="submit" value="cerrar" />
     </form>
-
-=======
-    <input type="submit" value="cerrar">
->>>>>>> e6f107573a3bd425acd916146b4ecce1186f0237
-</body>
-
+  </body>
 </html>
