--- a/Sprint2/HMTL/creaciondeusu.html
+++ b/Sprint2/HMTL/creaciondeusu.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-<<<<<<< HEAD
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -40,120 +39,64 @@
 
     <div>
       <form action="#">
-        <label for="fname">Identificacion:</label>
+        <label for="id">Identificacion:</label>
         <input
-          type="texto"
-          id="fname"
+          type="text"
+          id="id"
           size="15"
           placeholder="Digite Cedula ID"
           required
         />
         <br />
-        <label for="fname">Nombre: </label>
+        <label for="nombre">Nombre: </label>
         <input
-          type="texto"
-          id="fname"
+          type="text"
+          id="nombre"
           size="15"
           placeholder="Digite su nombre"
           required
         />
         <br />
-        <label for="fname">Apellido: </label>
+        <label for="apellido">Apellido: </label>
         <input
-          type="texto"
-          id="fname"
+          type="text"
+          id="apellido"
           size="15"
           placeholder="Digite su apellido"
           required
         />
         <br />
-        <label for="fname">Telefono: </label>
+        <label for="telefono">Telefono: </label>
         <input
-          type="texto"
-          id="fname"
+          type="text"
+          id="telefono"
           size="15"
           placeholder="Digite su telefono"
           required
         />
         <br />
-        <label for="fname">correo: </label>
+        <label for="correo">correo: </label>
         <input
-          type="iemail"
-          id="fname"
+          type="email"
+          id="correo"
           size="15"
           placeholder="Digite su email"
           required
         />
         <br />
-=======
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creacion de Usuarios</title>
-</head>
-<body>
-    <div style="clear: both">
-        <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
-        <h1 style="text-align:center">RappiPedidosGrp5</h1>
-      </div>
-      <br>
-      <br>
-      <ul>
-        <li><a href="principal.html">Principal</a></li>
-        <li><a href="creaciondeusu.html">Usuario</a></li>
-        <li><a href="productos.html">Producto</a></li>
-        <li>Pedido
-            <ul>
-                <li><a href="pedidos.html">Pedido</a></li>
-                <li><a href="crearpedido.html">Crear Pedido</a></li>
-                <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-                <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-                <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-            </ul>
-        </li>
-      </ul>
-    </nav>
-    <div>
-        <p>
-            <label for="estado">Tipo de usuario:</label>    
-            <select name="estado" id="estado">
-                <option value="pendiente">Usuario</option>
-                <option value="pendiente">Administrador</option>
-            </select>
-        </p>
-        <form action="#"></form>
-        <label for="fname">No. identificación:</label>
-        <input type="number" id="fname" size="15" value="Digite Cedula ID">
-        <br>
-        <label for="fname">Nombres: </label>
-        <input type="password" id="fname" size="15">
-        <br>
-        <label for="fname">Apellidos: </label>
-        <input type="password" id="fname" size="15">
-        <br>
-        <label for="fname">Telefono: </label>
-        <input type="password" id="fname" size="15">
-        <br>
-        <label for="fname">Correo electronico: </label>
-        <input type="password" id="fname" size="15">
-        <br>
->>>>>>> e6f107573a3bd425acd916146b4ecce1186f0237
-        <label for="fname">Usuario: </label>
+        <label for="usuario">Usuario: </label>
         <input
-          type="texto"
-          id="fname"
+          type="text"
+          id="usuario"
           size="15"
           placeholder="Digite su usuario"
           required
         />
         <br />
-        <label for="fname">Contraseña: </label>
-<<<<<<< HEAD
+        <label for="contrasena">Contraseña: </label>
         <input
           type="password"
-          id="fname"
+          id="contrasena"
           size="15"
           placeholder="Digite su contraseña"
           required
@@ -180,14 +123,3 @@
     </form>
   </body>
 </html>
-=======
-        <input type="password" id="fname" size="15">
-        <br>
-        <br>
-        <br>
-        <br>
-        <input type="submit" value="Crear">
-        <input type="submit" value="Editar">
-</body>
-</html>
->>>>>>> e6f107573a3bd425acd916146b4ecce1186f0237
