--- a/Sprint2/HMTL/crearproducto.html
+++ b/Sprint2/HMTL/crearproducto.html
@@ -1,132 +1,122 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Crear Producto</title>
-</head>
-<body>
-<<<<<<< HEAD
+  </head>
+  <body>
     <div style="clear: both">
-        <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
-        <h1 style="text-align:center">RappiPedidosGrp5</h1>
-      </div>
-      <br>
-      <br>
-      <nav class="navegacion">
-        <ul class="menu">
-            <li><a href="principal.html">Principal</a></li>
-            <li><a href="creaciondeusu.html">Usuario</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="pedidos.html">Pedidos</a>
-                <ul class="submenu">
-                    <li><a href="crearpedido.html">Crear Pedido</a></li>
-                    <li><a href="modificarpedido.html">Modificar Pedido</a></li>
-                    <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
-                    <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-                </ul>
-            </li>
-        </ul>
-      </nav>
-
-
-=======
-  <div style="clear: both">
-    <img src="img/logo_pedidos.png" alt="img/no-image.png" width="120" height="60" style="float: left">
-    <h1 style="text-align:center">RappiPedidosGrp5</h1>
-  </div>
-  <br>
-  <br>
-  <ul>
-    <li><a href="principal.html">Principal</a></li>
-    <li><a href="creaciondeusu.html">Usuario</a></li>
-    <li><a href="productos.html">Producto</a></li>
-    <li>Pedido
-        <ul>
-            <li><a href="pedidos.html">Pedido</a></li>
+      <img
+        src="img/logo_pedidos.png"
+        alt="img/no-image.png"
+        width="120"
+        height="60"
+        style="float: left"
+      />
+      <h1 style="text-align: center">RappiPedidosGrp5</h1>
+    </div>
+    <br />
+    <br />
+    <nav class="navegacion">
+      <ul class="menu">
+        <li><a href="principal.html">Principal</a></li>
+        <li><a href="creaciondeusu.html">Usuario</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li>
+          <a href="pedidos.html">Pedidos</a>
+          <ul class="submenu">
             <li><a href="crearpedido.html">Crear Pedido</a></li>
             <li><a href="modificarpedido.html">Modificar Pedido</a></li>
             <li><a href="Consultapedidos.html">Consultar Pedido</a></li>
             <li><a href="consultaReporte.html">Reporte Pedido</a></li>
-        </ul>
-    </li>
-  </ul>
->>>>>>> e6f107573a3bd425acd916146b4ecce1186f0237
+          </ul>
+        </li>
+      </ul>
+    </nav>
+
     <h2>Agregar un Producto</h2>
-    <div>       
-        <form action="#">
-          <label for="codigoprod">Código del producto</label>
-          <input
-            type="text"
-            id="codigoprod"
-            maxlength="11"
-            name="código producto"
-            disabled
-          />
-          <label for="nombreprod">nombre del producto</label>
-          <input
-            type="text"
-            id="nombreprod"
-            maxlength="120"
-            name="nombre producto"
-            placeholder="Escribir el nombre del producto"
-            required
-          />
-          <label for="estado">Estado Producto:</label>
-          <select name="estado" id="estado">
-            <option value="Seleccionar">Seleccionar</option>
-            <option value="Activo">Activo</option>
-            <option value="Inactivo">Inactivo</option>
-          </select>
-          <br><br>
-          <label for="descripcion" >Descripción del producto</label>
-          <textarea  name="descripcion" id="descripcion" cols="120" required></textarea>
-          </div>
-          <br><br>
-          <div>
-          <label for="cantidad">Cantidad</label>
-          <input
-            type="text"
-            id="cantidad"
-            maxlength="11"
-            name="cantidad"
-            placeholder="Escribir la cantidad disponible"
-            required
-          />
-          
-          <label for="costo">Costo Unitario</label>
-          <input
-            type="text"
-            id="costo"
-            name="costo"
-            placeholder="Escribir costo unitario"
-            required
-          />
-          <label for="precio">Precio Unitario</label>
-          <input
-            type="text"
-            id="precio"
-            name="precio"
-            placeholder="Escribir precio de venta unitario"
-            required
-          />
-          <br><br>
-          <div>
-            <label for="imagen">Imagen del Producto</label>
-              <input type="file"  name="imagen" id="imagen" onchange="upload_image(11);">
-              <br>
-              <input type="submit" value="Agregar Producto" >
-          </div>
-        </form>
-<<<<<<< HEAD
-        <div>
-          <form action="productos.html">
-            <input type="submit" value="Salir"> 
-          </form>
-        </div>
-        
-=======
->>>>>>> e6f107573a3bd425acd916146b4ecce1186f0237
-</body>
+    <form action="#">
+      <div>
+        <label for="codigoprod">Código del producto</label>
+        <input
+          type="text"
+          id="codigoprod"
+          maxlength="11"
+          name="código producto"
+          disabled
+        />
+        <label for="nombreprod">nombre del producto</label>
+        <input
+          type="text"
+          id="nombreprod"
+          maxlength="120"
+          name="nombre producto"
+          placeholder="Escribir el nombre del producto"
+          required
+        />
+        <label for="estado">Estado Producto:</label>
+        <select name="estado" id="estado">
+          <option value="Seleccionar">Seleccionar</option>
+          <option value="Activo">Activo</option>
+          <option value="Inactivo">Inactivo</option>
+        </select>
+        <br /><br />
+        <label for="descripcion">Descripción del producto</label>
+        <textarea
+          name="descripcion"
+          id="descripcion"
+          cols="120"
+          required
+        ></textarea>
+      </div>
+      <br /><br />
+      <div>
+        <label for="cantidad">Cantidad</label>
+        <input
+          type="text"
+          id="cantidad"
+          maxlength="11"
+          name="cantidad"
+          placeholder="Escribir la cantidad disponible"
+          required
+        />
+
+        <label for="costo">Costo Unitario</label>
+        <input
+          type="text"
+          id="costo"
+          name="costo"
+          placeholder="Escribir costo unitario"
+          required
+        />
+        <label for="precio">Precio Unitario</label>
+        <input
+          type="text"
+          id="precio"
+          name="precio"
+          placeholder="Escribir precio de venta unitario"
+          required
+        />
+      </div>
+      <br /><br />
+      <div>
+        <label for="imagen">Imagen del Producto</label>
+        <input
+          type="file"
+          name="imagen"
+          id="imagen"
+          onchange="upload_image(11);"
+        />
+        <br />
+        <input type="submit" value="Agregar Producto" />
+      </div>
+    </form>
+    <div>
+      <form action="productos.html">
+        <input type="submit" value="Salir" />
+      </form>
+    </div>
+  </body>
 </html>
